Fix image behind navbar mobile issue.

--- a/style.css
+++ b/style.css
@@ -108,6 +108,7 @@ img {
 #navBarLogo {
     background-color: #FFFFFF;
     border-radius: 0px;
+    height: 100%;
 }
 
 .content {
